# src/types/fetch.ts
@@ -2,6 +2,7 @@ export interface IFetch {
     fetcherId: string;
     fetcherConfig: Record<string, unknown>;
     fetchResultId: string;
-    status: 'IN_PROGRESS' | 'COMPLETED' | 'FAILED';
+    status: 'IN_PROGRESS' | 'COMPLETED' | 'UNAVAILABLE' | 'FAILED';
+    unavailableReason: string | null;
     data: unknown;
 }
